--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 byteorder = "1.2"
 crc32fast = "1.3"
 serde_derive = "1.0.215"
-serde = "1.0.215"       # Add this line
+serde = "1.0.215"
 
 [lib]
 name = "libactionkv"
